--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,20 +3,29 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport"
-            content="width=device-width, initial-scale=1.0">
+            content="width=device-width, initial-scale=1">
         <title>Amazon Scraper</title>
         <link style="border-radius: 30px;"
             rel="shortcut icon"
             href="./icons/flavicon.png"
             type="image/x-icon">
+        <!-- Css -->
         <link rel="stylesheet" href="./global.css">
+        <!-- bootstrap -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous">
     </head>
     <body>
         <div class="container">
             <h1>Amazon Product Scraper</h1>
-            <input type="text" id="keyword"
+            <input type="text"
+                id="keyword"
                 placeholder="Enter keyword">
-            <button id="scrapeButton">Scrape</button>
+            <button class="btn btn-primary"
+                id="scrapeButton">Search</button>
             <div id="results"></div>
         </div>
     </body>
